--- a/src/main/resources/com/example/demo/updatePassword.fxml
+++ b/src/main/resources/com/example/demo/updatePassword.fxml
@@ -36,7 +36,7 @@
             <Insets top="10.0" />
          </VBox.margin>
       </PasswordField>
-      <Text fx:id="passwordErrorMessage" fill="#c51b1b" onInputMethodTextChanged="#confirmUpdatePassword" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
+      <Text fx:id="passwordErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm Password :" wrappingWidth="159.36441105604172">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
