--- a/src/main/resources/com/example/demo/eventCreate.fxml
+++ b/src/main/resources/com/example/demo/eventCreate.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="714.0" prefWidth="1198.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createEventController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="751.0" prefWidth="1194.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.createEventController">
    <children>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;">
          <children>
@@ -168,17 +168,46 @@
             <Insets right="5.0" />
          </VBox.margin>
       </Text>
+      <Text opacity="0.58" strokeType="OUTSIDE" strokeWidth="0.0" text="Latitude (X) :" wrappingWidth="80.66667429606116">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+         <VBox.margin>
+            <Insets right="440.0" top="5.0" />
+         </VBox.margin>
+      </Text>
+      <Text layoutX="348.0" layoutY="416.0" opacity="0.58" strokeType="OUTSIDE" strokeWidth="0.0" text="Longitude (Y) :" wrappingWidth="105.46666161219275">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+         <VBox.margin>
+            <Insets top="-15.0" />
+         </VBox.margin>
+      </Text>
+      <TextField fx:id="eventVenueLongitude" alignment="CENTER" editable="false" layoutX="430.0" layoutY="413.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="86.0" text="-">
+         <VBox.margin>
+            <Insets left="640.0" right="480.0" top="-20.0" />
+         </VBox.margin>
+      </TextField>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
          <VBox.margin>
-            <Insets right="488.0" top="15.0" />
+            <Insets right="488.0" top="20.0" />
          </VBox.margin>
       </Text>
+      <TextField fx:id="eventVenueLatitude" alignment="CENTER" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="86.0" text="-">
+         <VBox.margin>
+            <Insets left="420.0" right="700.0" top="-65.0" />
+         </VBox.margin>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </TextField>
       <DatePicker fx:id="eventDate" editable="false" onKeyTyped="#eventDateValidation" prefHeight="31.0" prefWidth="521.0" promptText="DD/MM/YYYY">
          <VBox.margin>
-            <Insets top="10.0" />
+            <Insets top="50.0" />
          </VBox.margin>
       </DatePicker>
       <Text fx:id="eventDateErrorMessage" fill="#c51b1b" layoutX="352.0" layoutY="416.0" onKeyTyped="#eventDateValidation" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="520.0">
@@ -222,7 +251,7 @@
             <Insets />
         </VBox.margin>
       </Text>
-      <Button mnemonicParsing="false" onAction="#createEvent" text="Create">
+      <Button mnemonicParsing="false" onAction="#createEvent" prefHeight="26.0" prefWidth="85.0" text="Create">
         <VBox.margin>
             <Insets bottom="15.0" top="40.0" />
         </VBox.margin>
