--- a/src/main/resources/com/example/demo/updatePassword.fxml
+++ b/src/main/resources/com/example/demo/updatePassword.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.forgotPasswordController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: ffe4e1;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.forgotPasswordController">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Update Password">
+      <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Password">
          <font>
             <Font name="Showcard Gothic" size="30.0" />
          </font>
@@ -53,8 +53,11 @@
       <Text fx:id="confirmPasswordErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="492.53666973114014" />
       <Button mnemonicParsing="false" onAction="#updatePasswordButton" prefHeight="25.0" prefWidth="68.0" text="Confirm">
          <VBox.margin>
-            <Insets top="40.0" />
+            <Insets top="25.0" />
          </VBox.margin>
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
       </Button>
    </children>
 </VBox>
