--- a/src/main/resources/com/example/demo/booking.fxml
+++ b/src/main/resources/com/example/demo/booking.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -15,27 +14,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1277.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1540.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
    <top>
-      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;" BorderPane.alignment="CENTER">
+      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="55.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../../../icon.png" />
+                  <Image url="@logowithbg.png" />
                </image>
             </ImageView>
-            <Label prefHeight="22.0" prefWidth="193.0" text="HTF" textFill="#3c1f15">
-               <font>
-                  <Font name="Showcard Gothic" size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="10.0" top="25.0" />
-               </HBox.margin>
-            </Label>
-            <Pane maxWidth="-Infinity" prefHeight="73.0" prefWidth="593.0">
+            <Pane maxWidth="-Infinity" prefHeight="74.0" prefWidth="506.0">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
@@ -66,7 +57,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#bookingButton" prefHeight="73.0" prefWidth="81.0" style="-fx-background-color: #9B804E;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Booking">
+                  <Button mnemonicParsing="false" onAction="#bookingButton" prefHeight="73.0" prefWidth="81.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Booking">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -104,13 +95,13 @@
       </HBox>
    </top>
    <center>
-      <ScrollPane prefHeight="659.0" prefWidth="1030.0" BorderPane.alignment="CENTER">
+      <ScrollPane hbarPolicy="NEVER" prefHeight="658.0" prefWidth="345.0" BorderPane.alignment="CENTER">
          <content>
-            <VBox alignment="TOP_CENTER" prefHeight="1031.0" prefWidth="1038.0" style="-fx-background-color: #ffe5b6;">
+            <VBox alignment="TOP_CENTER" prefHeight="1031.0" prefWidth="1038.0" style="-fx-background-color: fddde6;">
                <children>
                   <VBox prefHeight="782.0" prefWidth="452.0" style="-fx-background-color: rgba(255,255,255.5); -fx-background-radius: 20;">
                      <VBox.margin>
-                        <Insets left="20.0" right="750.0" top="80.0" />
+                        <Insets left="20.0" right="750.0" top="30.0" />
                      </VBox.margin>
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="[ID] Destination">
@@ -265,19 +256,19 @@
       </ScrollPane>
    </center>
    <right>
-      <VBox prefHeight="659.0" prefWidth="870.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="658.0" prefWidth="1226.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Booking">
+            <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Booking">
                <font>
                   <Font name="Showcard Gothic" size="50.0" />
                </font>
                <VBox.margin>
-                  <Insets left="70.0" top="30.0" />
+                  <Insets left="20.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <VBox prefHeight="436.0" prefWidth="830.0" style="-fx-background-color: rgba(255,255,255,.5);">
+            <VBox prefHeight="436.0" prefWidth="1219.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                <VBox.margin>
-                  <Insets left="20.0" right="20.0" top="20.0" />
+                  <Insets left="20.0" right="40.0" top="20.0" />
                </VBox.margin>
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Destination ID for Booking:">
