--- a/src/main/resources/com/example/demo/chooseEvent.fxml
+++ b/src/main/resources/com/example/demo/chooseEvent.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -15,24 +14,16 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1271.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.chooseEventController">
    <top>
-      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;" BorderPane.alignment="CENTER">
+      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="205.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../../../icon.png" />
+                  <Image url="@logowithbg.png" />
                </image>
             </ImageView>
-            <Label prefHeight="22.0" prefWidth="203.0" text="HTF" textFill="#3c1f15">
-               <font>
-                  <Font name="Showcard Gothic" size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="10.0" top="25.0" />
-               </HBox.margin>
-            </Label>
             <Pane prefHeight="73.0" prefWidth="588.0">
                <HBox.margin>
                   <Insets left="100.0" />
@@ -56,7 +47,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#eventButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: #9B804E;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Event">
+                  <Button mnemonicParsing="false" onAction="#eventButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Event">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -102,9 +93,9 @@
       </HBox>
    </top>
    <center>
-      <VBox alignment="TOP_CENTER" prefHeight="453.0" prefWidth="707.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="453.0" prefWidth="707.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="EVENT">
+            <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="EVENT">
                <font>
                   <Font name="Showcard Gothic" size="50.0" />
                </font>
