--- a/src/main/resources/com/example/demo/eventView.fxml
+++ b/src/main/resources/com/example/demo/eventView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -15,26 +14,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1195.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.viewEventController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1484.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.viewEventController">
    <top>
-      <HBox prefHeight="73.0" prefWidth="1151.0" style="-fx-background-color: #B2935B;" BorderPane.alignment="CENTER">
+      <HBox prefHeight="73.0" prefWidth="1151.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="147.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../../../icon.png" />
+                  <Image url="@logowithbg.png" />
                </image>
             </ImageView>
-            <Label prefHeight="22.0" prefWidth="245.0" text="HTF" textFill="#3c1f15">
-               <font>
-                  <Font name="Showcard Gothic" size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="10.0" top="25.0" />
-               </HBox.margin>
-            </Label>
             <Pane prefHeight="73.0" prefWidth="587.0">
                <HBox.margin>
                   <Insets left="100.0" />
@@ -58,7 +49,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#eventButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: #9B804E;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Event">
+                  <Button mnemonicParsing="false" onAction="#eventButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Event">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -103,32 +94,22 @@
          </children>
       </HBox>
    </top>
-   <left>
-      <Pane prefHeight="453.0" prefWidth="170.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets left="20.0" />
-         </BorderPane.margin>
-      </Pane>
-   </left>
    <center>
-      <ScrollPane prefHeight="453.0" prefWidth="808.0" style="-fx-background-color: #FFE5B6;" BorderPane.alignment="CENTER">
+      <ScrollPane prefHeight="453.0" prefWidth="1006.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <content>
-            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1711.0" prefWidth="1074.0" style="-fx-background-color: #FFE5B6;">
-               <padding>
-                  <Insets right="-100.0" />
-               </padding>
+            <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="1711.0" prefWidth="1520.0" style="-fx-background-color: fddde6;">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Event">
+                  <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Event">
                      <font>
                         <Font name="Showcard Gothic" size="30.0" />
                      </font>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="400.0" top="30.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" top="30.0" />
                      </VBox.margin>
                   </Text>
                   <VBox maxWidth="-Infinity" prefHeight="143.0" prefWidth="913.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Title">
@@ -237,7 +218,7 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="143.0" prefWidth="913.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -294,7 +275,7 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="143.0" prefWidth="913.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -351,7 +332,7 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="143.0" prefWidth="913.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -408,7 +389,7 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="143.0" prefWidth="913.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -465,7 +446,7 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="143.0" prefWidth="913.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -522,7 +503,7 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="143.0" prefWidth="913.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -579,7 +560,7 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="143.0" prefWidth="913.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -636,7 +617,7 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="143.0" prefWidth="913.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
@@ -693,12 +674,15 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="20.0" left="20.0" right="200.0" />
+                        <Insets bottom="20.0" left="200.0" right="200.0" />
                      </VBox.margin>
                   </VBox>
                </children>
             </VBox>
          </content>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
       </ScrollPane>
    </center>
 </BorderPane>
