--- a/src/main/resources/com/example/demo/forgotPassword.fxml
+++ b/src/main/resources/com/example/demo/forgotPassword.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.forgotPasswordController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: ffe4e1;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.forgotPasswordController">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot Password">
+      <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot Password">
          <font>
             <Font name="Showcard Gothic" size="30.0" />
          </font>
@@ -30,10 +30,13 @@
             <Insets top="10.0" />
          </VBox.margin>
       </TextField>
-      <Button mnemonicParsing="false" onAction="#sendEmail" prefHeight="25.0" prefWidth="131.0" text="Temporary Password">
+      <Button mnemonicParsing="false" onAction="#sendEmail" prefHeight="26.0" prefWidth="143.0" text="Temporary Password">
          <VBox.margin>
             <Insets left="400.0" right="50.0" top="10.0" />
          </VBox.margin>
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
       </Button>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Temporary Password :">
          <font>
@@ -52,6 +55,9 @@
          <VBox.margin>
             <Insets top="40.0" />
          </VBox.margin>
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
       </Button>
    </children>
 </VBox>
