--- a/src/main/resources/com/example/demo/homePage.fxml
+++ b/src/main/resources/com/example/demo/homePage.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,26 +12,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="994.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.homeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="994.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.homeController">
    <top>
-      <HBox alignment="TOP_CENTER" prefHeight="73.0" prefWidth="846.0" style="-fx-background-color: #B2935B;" BorderPane.alignment="CENTER">
+      <HBox alignment="TOP_CENTER" prefHeight="73.0" prefWidth="846.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="56.0" fitWidth="137.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../../../icon.png" />
+                  <Image url="@logowithbg.png" />
                </image>
             </ImageView>
-            <Label prefHeight="22.0" prefWidth="335.0" text="HTF" textFill="#3c1f15">
-               <font>
-                  <Font name="Showcard Gothic" size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="10.0" top="25.0" />
-               </HBox.margin>
-            </Label>
             <Pane maxWidth="-Infinity" prefHeight="73.0" prefWidth="549.0" style="-fx-background-color: transparent;">
                <HBox.margin>
                   <Insets left="100.0" />
@@ -40,7 +31,7 @@
             </Pane>
             <HBox alignment="TOP_RIGHT" prefHeight="73.0" prefWidth="772.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#homeStartUp" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: #9B804E;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
+                  <Button mnemonicParsing="false" onAction="#homeStartUp" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin>
@@ -105,12 +96,12 @@
       </HBox>
    </top>
    <center>
-      <VBox prefHeight="449.0" prefWidth="447.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="449.0" prefWidth="447.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Get STArted">
+            <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Get STArted">
                <font>
                   <Font name="Showcard Gothic" size="20.0" />
                </font>
@@ -189,7 +180,7 @@
                   </Hyperlink>
                </children>
             </VBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard">
+            <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard">
                <font>
                   <Font name="Showcard Gothic" size="20.0" />
                </font>
@@ -208,16 +199,16 @@
    <left>
       <VBox prefHeight="431.0" prefWidth="240.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="425.0" prefWidth="250.0">
+            <VBox prefHeight="425.0" prefWidth="250.0" style="-fx-background-color: fddde6;">
                <children>
                   <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="163.0" prefWidth="237.0" style="-fx-background-radius: 20; -fx-background-color: rgba(255,255,255,.5);">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="What is DubiDubiDu?">
+                        <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="What is HTF?" wrappingWidth="105.55958551168442">
                            <font>
                               <Font name="Showcard Gothic" size="15.0" />
                            </font>
                            <VBox.margin>
-                              <Insets left="35.0" top="20.0" />
+                              <Insets left="60.0" top="20.0" />
                            </VBox.margin>
                         </Text>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To give exposure to the concept and importance of STEM knowledge to the young generations, we will be focusing on simple gamification to make the STEM learning experience interesting and appealing." wrappingWidth="213.3176727294922">
@@ -283,14 +274,17 @@
       </VBox>
    </left>
    <bottom>
-      <VBox prefHeight="58.0" prefWidth="661.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="58.0" prefWidth="661.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Any Question? Contact Us!!">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Any Inquiries? Contact Us!">
                <VBox.margin>
                   <Insets left="30.0" />
                </VBox.margin>
+               <font>
+                  <Font name="Arial" size="12.0" />
+               </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="\@instagram: dubidubidu&#10;@whatsapp: +6012-3456789&#10;@email： dubidu04@gmail.com">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="\@Instagram: dubidubidu&#10;@WhatsApp: +6012-3456789&#10;@E-mail： hackingthefuture2324@gmail.com">
                <VBox.margin>
                   <Insets bottom="20.0" left="30.0" />
                </VBox.margin>
