--- a/src/main/resources/com/example/demo/login.fxml
+++ b/src/main/resources/com/example/demo/login.fxml
@@ -13,29 +13,24 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="704.0" prefWidth="1222.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.loginController">
+<VBox alignment="CENTER" prefHeight="704.0" prefWidth="1222.0" style="-fx-background-color: ffe4e1;" stylesheets="@../../../CssStyle/login.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.loginController">
    <children>
-      <Button mnemonicParsing="false" onAction="#closeButton" text="x">
+      <Button mnemonicParsing="false" onAction="#closeButton" style="-fx-background-color: none;" styleClass="exit" stylesheets="@../../../CssStyle/home.css" text="Exit" textFill="#cc3366">
          <VBox.margin>
-            <Insets left="1200.0" top="-100.0" />
+            <Insets left="1100.0" top="-100.0" />
          </VBox.margin>
+         <font>
+            <Font name="Arial Rounded MT Bold" size="15.0" />
+         </font>
       </Button>
-      <ImageView fitHeight="149.0" fitWidth="167.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="102.0" fitWidth="242.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../icon.png" />
+            <Image url="@logowithbg.png" />
          </image>
          <VBox.margin>
             <Insets top="60.0" />
          </VBox.margin>
       </ImageView>
-      <Text fill="#8b623b" strokeType="OUTSIDE" strokeWidth="0.0" text="HTF">
-         <font>
-            <Font name="Showcard Gothic" size="24.0" />
-         </font>
-         <VBox.margin>
-            <Insets top="20.0" />
-         </VBox.margin>
-      </Text>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username/Email Address">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -67,6 +62,9 @@
          <VBox.margin>
             <Insets left="250.0" top="-15.0" />
          </VBox.margin>
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
       </Hyperlink>
       <PasswordField fx:id="passwordLogin" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="28.0" prefWidth="377.0" promptText="123456" style="-fx-background-color: rgba(0,0,0,0); -fx-border-color: transparent transparent grey transparent;">
          <VBox.margin>
@@ -87,7 +85,10 @@
       <Hyperlink onAction="#cAAButton" text="Create An Account" textFill="#433eac">
          <VBox.margin>
             <Insets top="20.0" />
-         </VBox.margin></Hyperlink>
+         </VBox.margin>
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font></Hyperlink>
       <Accordion />
    </children>
    <cursor>
