--- a/src/main/resources/com/example/demo/quizCreate.fxml
+++ b/src/main/resources/com/example/demo/quizCreate.fxml
@@ -170,7 +170,7 @@
          </VBox.margin>
       </TextField>
       <Text fx:id="quizContentErrorMessage" fill="#c51b1b" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="522.0" />
-      <Button mnemonicParsing="false" text="Create">
+      <Button mnemonicParsing="false" onAction="#createQuiz" text="Create">
          <VBox.margin>
             <Insets top="40.0" />
          </VBox.margin>
