--- a/src/main/resources/com/example/demo/leaderboard.fxml
+++ b/src/main/resources/com/example/demo/leaderboard.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,24 +13,16 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="1272.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.leaderBoardController">
    <top>
-      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;" BorderPane.alignment="CENTER">
+      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../../../icon.png" />
+                  <Image url="@logowithbg.png" />
                </image>
             </ImageView>
-            <Label prefHeight="22.0" prefWidth="163.0" text="HTF" textFill="#3c1f15">
-               <font>
-                  <Font name="Showcard Gothic" size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="10.0" top="25.0" />
-               </HBox.margin>
-            </Label>
             <Pane prefHeight="73.0" prefWidth="506.0">
                <HBox.margin>
                   <Insets left="100.0" />
@@ -71,7 +62,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#leaderBoardButton" prefHeight="79.0" prefWidth="111.0" style="-fx-background-color: #9B804E;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="LeaderBoard">
+                  <Button mnemonicParsing="false" onAction="#leaderBoardButton" prefHeight="79.0" prefWidth="111.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="LeaderBoard">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -101,9 +92,9 @@
       </HBox>
    </top>
    <center>
-      <VBox alignment="TOP_CENTER" prefHeight="592.0" prefWidth="621.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="592.0" prefWidth="621.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="🎖 LeaderBoard 🎖">
+            <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="🎖 LeaderBoard 🎖">
                <font>
                   <Font name="Showcard Gothic" size="50.0" />
                </font>
@@ -234,7 +225,7 @@
       </VBox>
    </center>
    <left>
-      <VBox alignment="TOP_CENTER" prefHeight="592.0" prefWidth="263.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="592.0" prefWidth="263.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Rank">
                <font>
@@ -256,14 +247,14 @@
       </VBox>
    </left>
    <right>
-      <VBox prefHeight="453.0" prefWidth="332.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="453.0" prefWidth="332.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Point">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Point" textAlignment="CENTER">
                <font>
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets left="-50.0" top="115.0" />
+                  <Insets left="-35.0" top="115.0" />
                </VBox.margin>
             </Text>
             <VBox prefHeight="31.0" prefWidth="299.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
