--- a/src/main/resources/com/example/demo/personalProfile.fxml
+++ b/src/main/resources/com/example/demo/personalProfile.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -16,24 +15,16 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1266.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.personalProfileController">
    <top>
-      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;" BorderPane.alignment="CENTER">
+      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="148.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../../../icon.png" />
+                  <Image url="@logowithbg.png" />
                </image>
             </ImageView>
-            <Label prefHeight="22.0" prefWidth="199.0" text="HTF" textFill="#3c1f15">
-               <font>
-                  <Font name="Showcard Gothic" size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="10.0" top="25.0" />
-               </HBox.margin>
-            </Label>
             <Pane prefHeight="73.0" prefWidth="594.0">
                <HBox.margin>
                   <Insets left="100.0" />
@@ -81,7 +72,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#profileButton" prefHeight="77.0" prefWidth="63.0" style="-fx-background-color: #9B804E;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Profile">
+                  <Button mnemonicParsing="false" onAction="#profileButton" prefHeight="77.0" prefWidth="63.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Profile">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -103,7 +94,7 @@
       </HBox>
    </top>
    <center>
-      <VBox prefHeight="482.0" prefWidth="931.0" BorderPane.alignment="CENTER_LEFT">
+      <VBox prefHeight="482.0" prefWidth="931.0" style="-fx-background-color: ffdde6;" BorderPane.alignment="CENTER_LEFT">
          <children>
             <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="371.0" prefWidth="862.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                <VBox.margin>
@@ -210,31 +201,34 @@
       </VBox>
    </center>
    <left>
-      <VBox prefHeight="453.0" prefWidth="335.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="453.0" prefWidth="335.0" style="-fx-background-color: ffdde6;" BorderPane.alignment="CENTER">
          <children>
             <SplitPane dividerPositions="0.34415584415584416, 0.7240259740259739" maxWidth="-Infinity" orientation="VERTICAL" prefHeight="152.0" prefWidth="220.0">
                <VBox.margin>
-                  <Insets left="20.0" right="20.0" top="200.0" />
+                  <Insets left="50.0" right="20.0" top="76.0" />
                </VBox.margin>
                <items>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFCC;">
                      <children>
-                        <Button layoutX="-3.0" layoutY="-0.6666666666666666" mnemonicParsing="false" onAction="#profileButton" prefHeight="47.0" prefWidth="222.0" style="-fx-background-color: #DBDBB3;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Profile" AnchorPane.topAnchor="-1.0" />
+                        <Button layoutX="-3.0" layoutY="-0.6666666666666666" mnemonicParsing="false" onAction="#profileButton" prefHeight="47.0" prefWidth="222.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Profile" AnchorPane.topAnchor="-1.0" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="47.0" prefWidth="207.0" style="-fx-background-color: #FFFFCC;">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#requestButton" prefHeight="47.0" prefWidth="219.0" style="-fx-background-color: #FFFFCC;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Request" />
+                        <Button mnemonicParsing="false" onAction="#requestButton" prefHeight="47.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Request" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFCC;">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#friendButton" prefHeight="42.0" prefWidth="219.0" style="-fx-background-color: #FFFFCC;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend" />
+                        <Button mnemonicParsing="false" onAction="#friendButton" prefHeight="42.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend" />
                      </children>
                   </AnchorPane>
                </items>
             </SplitPane>
          </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
       </VBox>
    </left>
 </BorderPane>
