--- a/src/main/resources/com/example/demo/quizAttempt.fxml
+++ b/src/main/resources/com/example/demo/quizAttempt.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -16,26 +15,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1282.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.attemptQuizController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1282.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.attemptQuizController">
    <top>
-      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: #B2935B;" BorderPane.alignment="CENTER">
+      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="71.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="170.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@../../../icon.png" />
+                  <Image url="@logowithbg.png" />
                </image>
             </ImageView>
-            <Label prefHeight="22.0" prefWidth="198.0" text="HTF" textFill="#3c1f15">
-               <font>
-                  <Font name="Showcard Gothic" size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="10.0" top="25.0" />
-               </HBox.margin>
-            </Label>
             <Pane prefHeight="73.0" prefWidth="595.0">
                <HBox.margin>
                   <Insets left="100.0" />
@@ -51,7 +42,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#quizButton" prefHeight="73.0" prefWidth="73.0" style="-fx-background-color: #9B804E;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Quiz">
+                  <Button mnemonicParsing="false" onAction="#quizButton" prefHeight="73.0" prefWidth="73.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Quiz">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -105,7 +96,7 @@
       </HBox>
    </top>
    <left>
-      <Pane prefHeight="453.0" prefWidth="231.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="453.0" prefWidth="231.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
             <VBox layoutX="10.0" layoutY="84.0" maxWidth="-Infinity" prefHeight="217.0" prefWidth="194.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                <children>
@@ -158,12 +149,9 @@
       </Pane>
    </left>
    <center>
-      <ScrollPane prefHeight="453.0" prefWidth="808.0" style="-fx-background-color: #FFE5B6;" BorderPane.alignment="CENTER">
+      <ScrollPane hbarPolicy="NEVER" maxWidth="-Infinity" prefHeight="453.0" prefWidth="2000.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <content>
-            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="708.0" prefWidth="1012.0" style="-fx-background-color: #FFE5B6;">
-               <padding>
-                  <Insets right="-100.0" />
-               </padding>
+            <VBox maxWidth="-Infinity" prefHeight="728.0" prefWidth="1270.0" style="-fx-background-color: fddde6;">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Attempt Quiz">
                      <font>
@@ -173,7 +161,7 @@
                         <Insets left="250.0" top="30.0" />
                      </VBox.margin>
                   </Text>
-                  <VBox prefHeight="200.0" prefWidth="962.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+                  <VBox maxHeight="-Infinity" prefHeight="210.0" prefWidth="0.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <VBox.margin>
                         <Insets left="20.0" right="200.0" top="20.0" />
                      </VBox.margin>
@@ -186,7 +174,7 @@
                               <Insets left="20.0" top="20.0" />
                            </VBox.margin>
                         </Text>
-                        <TextField alignment="CENTER" prefHeight="13.0" prefWidth="70.0" style="-fx-background-color: green; -fx-background-radius: 100;" text="THEME">
+                        <TextField alignment="CENTER" maxWidth="-Infinity" prefHeight="23.0" prefWidth="100.0" style="-fx-background-color: pink; -fx-background-radius: 100;" text="THEME">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="12.0" />
                            </font>
@@ -201,12 +189,15 @@
                         </TextArea>
                         <Button mnemonicParsing="false" text="Attempt">
                            <VBox.margin>
-                              <Insets left="800.0" top="15.0" />
+                              <Insets left="1060.0" top="15.0" />
                            </VBox.margin>
                         </Button>
                      </children>
                   </VBox>
                </children>
+               <padding>
+                  <Insets right="-100.0" />
+               </padding>
             </VBox>
          </content>
       </ScrollPane>
