--- a/src/main/resources/com/example/demo/quizCreate.fxml
+++ b/src/main/resources/com/example/demo/quizCreate.fxml
@@ -141,7 +141,7 @@
             <Insets right="470.0" top="30.0" />
          </VBox.margin>
       </Text>
-      <SplitMenuButton fx:id="quizTheme" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onKeyTyped="#quizThemeValidation" prefHeight="25.0" prefWidth="520.0" text="Select Theme">
+      <SplitMenuButton fx:id="quizTheme" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#quizThemeValidation" onKeyTyped="#quizThemeValidation" prefHeight="25.0" prefWidth="520.0" text="Select Theme">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
